@@ -1,3 +1,9 @@
+Wed Jan 23 01:32:22 CET 2013  John Tytgat  <John.Tytgat@aaug.net>
+
+	* src/state.c (c_code16, c_code32, c_thumb, c_thumbx): Add alignment
+	support.
+	* unittests/compare/core/directive_code_thumb.s: Add.
+
 Wed Jan 23 00:11:25 CET 2013  John Tytgat  <John.Tytgat@aaug.net>
 
 	* src/decode.c (Decode_FinalCheck): Better reporting.
